@@ -1,4 +1,4 @@
-% Generated by roxygen2 (4.0.1): do not edit by hand
+% Generated by roxygen2 (4.0.2): do not edit by hand
 \name{fSRM}
 \alias{fSRM}
 \title{Run a Social Relations Model with roles ("Family SRM")}
@@ -17,27 +17,27 @@ fSRM(formula = NULL, data, drop = "default", add = "", means = FALSE,
 
 \item{add}{Additional lavaan syntax pasted at the end of the generated model. Can contain, for example, user specified error correlations.}
 
-\item{IGSIM}{Define intragenerational similarity correlations. Must be a list where the levels of actor.id and partner.id are combined, e.g.: \code{IGSIM=list(c("m", "f"), c("c", "y"))}. Here "m"other and "f"ather are defined as one generation, and "y"ounger and "o"lder as the other generation.}
-
-\item{syntax}{In that variable the user can directly provide a lavaan model syntax. Then no automatical model syntax is generated.}
-
-\item{add.variable}{Not yet fully implemented: Add external variables to the model syntax.}
-
-\item{...}{Additional arguments passed to the \code{sem} function of \code{lavaan}}
-
 \item{means}{Should the structured means of the SRM factors be calculated?}
 
 \item{pairwise}{Compute pairwise comparison of actor and partner means between all roles? Only works when \code{means} is also set to TRUE.}
 
-\item{group}{Variable name indicating group membership}
-
 \item{diff}{Compare groups with the delta method? You need to specify a group identifier in parameter \code{group}. If \code{diff = TRUE} and \code{means = FALSE}, only variances are compared between groups. If \code{diff = TRUE} and \code{means = TRUE}, variances and means are compared between groups.}
+
+\item{IGSIM}{Define intragenerational similarity correlations. Must be a list where the levels of actor.id and partner.id are combined, e.g.: \code{IGSIM=list(c("m", "f"), c("c", "y"))}. Here "m"other and "f"ather are defined as one generation, and "y"ounger and "o"lder as the other generation.}
+
+\item{add.variable}{Not yet fully implemented: Add external variables to the model syntax.}
+
+\item{syntax}{In that variable the user can directly provide a lavaan model syntax. Then no automatical model syntax is generated.}
+
+\item{group}{Variable name indicating group membership}
 
 \item{noNegVar}{Should variance estimates be constrained to be positive?}
 
+\item{rolesEqual}{Maximal constraints: Do roles matter at all? If this parameter is set to TRUE, it is a model with no mean difference, the actor variances equal, partner variances equal, relationship variances equal, and the respective reciprocities equal (Thanks to a suggestion of David Kenny). Model comparisons via \code{anova} can show whether roles matter at all.}
+
 \item{missing}{Handling of missing values. By default (\code{NA}), Full Information Maximum Likelihood (FIML) is employed in case of missing values. If families with missing values should be excluded, use \code{missing = "listwise"}}
 
-\item{rolesEqual}{Maximal constraints: Do roles matter at all? If this parameter is set to TRUE, it is a model with no mean difference, the actor variances equal, partner variances equal, relationship variances equal, and the respective reciprocities equal (Thanks to a suggestion of David Kenny). Model comparisons via \code{anova} can show whether roles matter at all.}
+\item{...}{Additional arguments passed to the \code{sem} function of \code{lavaan}}
 }
 \description{
 Run a Social Relations Model with roles ("Family SRM")
