@@ -1,4 +1,4 @@
-% Generated by roxygen2 (4.0.1): do not edit by hand
+% Generated by roxygen2 (4.0.2): do not edit by hand
 \name{plot.fSRM}
 \alias{plot.fSRM}
 \title{Plot an fSRM-object, two types}
@@ -22,17 +22,21 @@ This function provides two types of plots:
 2) Plot the mean decomposition for each dyad (set \code{means=TRUE})
 }
 \examples{
+\dontrun{
 data(two.indicators)
 # 4 persons, 1 indicator
-f4.1 <- fSRM(dep1 ~ actor.id*partner.id | family.id, two.indicators)
+f4.1 <- fSRM(dep1 ~ actor.id*partner.id | family.id, two.indicators, means=TRUE)
 f4.1
 plot(f4.1)
 plot(f4.1, bw=TRUE)
+plot(f4.1, means=TRUE)
 
 # 4 persons, 2 indicators
-f4.2 <- fSRM(dep1/dep2 ~ actor.id*partner.id | family.id, two.indicators)
+f4.2 <- fSRM(dep1/dep2 ~ actor.id*partner.id | family.id, two.indicators, means=TRUE)
 f4.2
 plot(f4.2)
 plot(f4.2, bw=TRUE)
+plot(f4.2, means=TRUE)
+}
 }
 
