@@ -1,4 +1,4 @@
-% Generated by roxygen2 (4.0.1): do not edit by hand
+% Generated by roxygen2 (4.0.2): do not edit by hand
 \name{predict.fSRM}
 \alias{predict.fSRM}
 \title{Predict new cases based on a fitted fSRM model}
